<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/layout_to_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <CheckBox
            android:id="@+id/checkPage1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pagename_1"
            android:textSize="15sp" />

        <CheckBox
            android:id="@+id/checkPage2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pagename_2"
            android:textSize="15sp" />

        <CheckBox
            android:id="@+id/checkPage3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pagename_3"
            android:textSize="15sp" />

        <CheckBox
            android:id="@+id/checkPage4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pagename_4"
            android:textSize="15sp" />

        <CheckBox
            android:id="@+id/checkPage5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pagename_5"
            android:textSize="15sp" />

        <CheckBox
            android:id="@+id/checkPage6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pagename_6"
            android:textSize="15sp" />

        <CheckBox
            android:id="@+id/checkPage7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pagename_7"
            android:textSize="15sp" />

        <CheckBox
            android:id="@+id/checkPage8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pagename_8"
            android:textSize="15sp" />

        <CheckBox
            android:id="@+id/checkPage9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pagename_9"
            android:textSize="15sp" />

        <CheckBox
            android:id="@+id/checkPage10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pagename_10"
            android:textSize="15sp" />

        <CheckBox
            android:id="@+id/checkPage11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pagename_11"
            android:textSize="15sp" />

        <CheckBox
            android:id="@+id/checkPage12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pagename_12"
            android:textSize="15sp" />

        <CheckBox
            android:id="@+id/checkPage13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pagename_13"
            android:textSize="15sp" />

        <CheckBox
            android:id="@+id/checkPage14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pagename_14"
            android:textSize="15sp" />

        <CheckBox
            android:id="@+id/checkPage15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pagename_15"
            android:textSize="15sp" />


    </LinearLayout>
</ScrollView>